--- a/res/layout/activity_pokemon_detail_view.xml
+++ b/res/layout/activity_pokemon_detail_view.xml
@@ -4,10 +4,39 @@
     android:layout_height="match_parent" >
 
     <WebView
-        android:id="@+id/htmlRendorView"
+        android:id="@+id/htmlRenderView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" />
+        android:layout_height="237dp"
+        android:layout_alignParentLeft="true" android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true" android:layout_marginTop="47dp"/>
+    <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            android:layout_above="@+id/htmlRenderView">
+
+        <ImageView
+                android:id="@+id/detailViewImage"
+                android:layout_above="@+id/htmlRenderView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:tag="icon"
+                android:minHeight="48dp"
+                android:maxWidth="48dp"
+                android:maxHeight="48dp"
+                android:minWidth="48dp"
+                />
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/htmlRenderView"
+                android:id="@+id/detailViewText"
+                android:textSize="24sp"
+                android:textColor="#000000"
+                android:text="TextView"
+                android:tag="text"
+                android:layout_gravity="center_vertical"
+                />
+    </LinearLayout>
 
 </RelativeLayout>
