--- a/res/layout/activity_pokemon_detail_view.xml
+++ b/res/layout/activity_pokemon_detail_view.xml
@@ -20,13 +20,13 @@
 
             <TextView
                     android:layout_weight="3"
-                    android:layout_width="fill_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:id="@+id/detailViewText"
                     android:textSize="24sp"
                     android:textColor="#000000"
-                    android:text="Hello:w"
+                    android:text="Hello"
                     android:tag="text"
                     />
         </TableRow>
