--- a/res/layout/pokemon_list_icon.xml
+++ b/res/layout/pokemon_list_icon.xml
@@ -16,7 +16,8 @@
 	            android:layout_height="wrap_content"
 	            android:tag="icon"
 	            android:minHeight="70dp"
-	            android:minWidth="70dp"></ImageView>
+	            android:minWidth="70dp"
+                    />
 
 	        <TextView
 	            android:layout_width="wrap_content"
@@ -26,6 +27,7 @@
 	            android:id="@+id/PokemonListText"
 	            android:text="TextView"
 	            android:tag="text"
-	            android:layout_gravity="center_vertical"></TextView>
+	            android:layout_gravity="center_vertical"
+                    />
 	    </LinearLayout>
 </LinearLayout>
