--- a/res/layout/pokemon_list_icon.xml
+++ b/res/layout/pokemon_list_icon.xml
@@ -20,7 +20,7 @@
                     />
 
 	        <TextView
-	            android:layout_width="wrap_content"
+	            android:layout_width="fill_parent"
 	            android:layout_height="wrap_content"
 	            android:textSize="24sp"
 	            android:textColor="#000000"
